Liked implemented in getAllTrainings endpoint.
